# tfl-mcp

./: readme.md
client/: app.py  client.py  pyproject.toml
mcp-client/: app.py  pyproject.toml  readme.md
mcp-server/: readme.md  server.py
server/: pyproject.toml  server.py
